// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/carousel/demo/basic.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="slider am-carousel"
    style="position:relative;display:block;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;visibility:hidden"
  >
    <div
      class="slider-frame"
      style="position:relative;display:block;overflow:hidden;height:auto;margin:0px;padding:0;transform:translate3d(0, 0, 0);-webkit-transform:translate3d(0, 0, 0);-ms-transform:translate(0, 0);box-sizing:border-box;-moz-box-sizing:border-box"
    >
      <ul
        class="slider-list"
        style="transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);-ms-transform:translate(0px, 0px);position:relative;display:block;margin:0px 0px;padding:0;height:0;width:0;cursor:inherit;box-sizing:border-box;-moz-box-sizing:border-box"
      >
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:inline-block;list-style-type:none;vertical-align:top;width:0;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:0;margin-right:0;margin-top:auto;margin-bottom:auto"
        >
          <a
            href="http://www.alipay.com"
            style="display:inline-block;width:100%;height:176px"
          >
            <img
              alt=""
              src="https://zos.alipayobjects.com/rmsportal/1.png"
              style="width:100%;vertical-align:top"
            />
          </a>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:inline-block;list-style-type:none;vertical-align:top;width:0;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:0;margin-right:0;margin-top:auto;margin-bottom:auto"
        >
          <a
            href="http://www.alipay.com"
            style="display:inline-block;width:100%;height:176px"
          >
            <img
              alt=""
              src="https://zos.alipayobjects.com/rmsportal/2.png"
              style="width:100%;vertical-align:top"
            />
          </a>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:inline-block;list-style-type:none;vertical-align:top;width:0;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:0;margin-right:0;margin-top:auto;margin-bottom:auto"
        >
          <a
            href="http://www.alipay.com"
            style="display:inline-block;width:100%;height:176px"
          >
            <img
              alt=""
              src="https://zos.alipayobjects.com/rmsportal/3.png"
              style="width:100%;vertical-align:top"
            />
          </a>
        </li>
      </ul>
    </div>
    <div
      class="slider-decorator-0"
      style="position:absolute;bottom:0;width:100%;text-align:center"
    >
      <div
        class="am-carousel-wrap"
      >
        <div
          class="am-carousel-wrap-dot am-carousel-wrap-dot-active"
        >
          <span />
        </div>
        <div
          class="am-carousel-wrap-dot"
        >
          <span />
        </div>
        <div
          class="am-carousel-wrap-dot"
        >
          <span />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/basic-dynamic.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      Click me to add child
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="slider am-carousel"
    style="position:relative;display:block;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;visibility:hidden"
  >
    <div
      class="slider-frame"
      style="position:relative;display:block;overflow:hidden;height:auto;margin:0px;padding:0;transform:translate3d(0, 0, 0);-webkit-transform:translate3d(0, 0, 0);-ms-transform:translate(0, 0);box-sizing:border-box;-moz-box-sizing:border-box"
    >
      <ul
        class="slider-list"
        style="transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);-ms-transform:translate(0px, 0px);position:relative;display:block;margin:0px 0px;padding:0;height:0;width:0;cursor:inherit;box-sizing:border-box;-moz-box-sizing:border-box"
      >
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:inline-block;list-style-type:none;vertical-align:top;width:0;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:0;margin-right:0;margin-top:auto;margin-bottom:auto"
        >
          <a
            href="http://www.alipay.com"
            style="display:inline-block;width:100%;height:176px"
          >
            <img
              alt=""
              src="https://zos.alipayobjects.com/rmsportal/1.png"
              style="width:100%;vertical-align:top"
            />
          </a>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:inline-block;list-style-type:none;vertical-align:top;width:0;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:0;margin-right:0;margin-top:auto;margin-bottom:auto"
        >
          <a
            href="http://www.alipay.com"
            style="display:inline-block;width:100%;height:176px"
          >
            <img
              alt=""
              src="https://zos.alipayobjects.com/rmsportal/2.png"
              style="width:100%;vertical-align:top"
            />
          </a>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:inline-block;list-style-type:none;vertical-align:top;width:0;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:0;margin-right:0;margin-top:auto;margin-bottom:auto"
        >
          <a
            href="http://www.alipay.com"
            style="display:inline-block;width:100%;height:176px"
          >
            <img
              alt=""
              src="https://zos.alipayobjects.com/rmsportal/3.png"
              style="width:100%;vertical-align:top"
            />
          </a>
        </li>
      </ul>
    </div>
    <div
      class="slider-decorator-0"
      style="position:absolute;bottom:0;width:100%;text-align:center"
    >
      <div
        class="am-carousel-wrap"
      >
        <div
          class="am-carousel-wrap-dot"
        >
          <span />
        </div>
        <div
          class="am-carousel-wrap-dot"
        >
          <span />
        </div>
        <div
          class="am-carousel-wrap-dot am-carousel-wrap-dot-active"
        >
          <span />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/basic-space.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="slider am-carousel space-carousel"
    style="position:relative;display:block;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;visibility:hidden"
  >
    <div
      class="slider-frame"
      style="position:relative;display:block;overflow:visible;height:auto;margin:0px;padding:0;transform:translate3d(0, 0, 0);-webkit-transform:translate3d(0, 0, 0);-ms-transform:translate(0, 0);box-sizing:border-box;-moz-box-sizing:border-box"
    >
      <ul
        class="slider-list"
        style="transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);-ms-transform:translate(0px, 0px);position:relative;display:block;margin:0px -5px;padding:0;height:0;width:30px;cursor:inherit;box-sizing:border-box;-moz-box-sizing:border-box"
      >
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:inline-block;list-style-type:none;vertical-align:top;width:0;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:5px;margin-right:5px;margin-top:auto;margin-bottom:auto"
        >
          <a
            href="http://www.alipay.com"
            style="display:block;position:relative;top:0;height:176px;box-shadow:2px 1px 1px rgba(0, 0, 0, 0.2)"
          >
            <img
              alt=""
              src="https://zos.alipayobjects.com/rmsportal/1.png"
              style="width:100%;vertical-align:top"
            />
          </a>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:10px;top:0;display:inline-block;list-style-type:none;vertical-align:top;width:0;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:5px;margin-right:5px;margin-top:auto;margin-bottom:auto"
        >
          <a
            href="http://www.alipay.com"
            style="display:block;position:relative;top:0;height:176px;box-shadow:2px 1px 1px rgba(0, 0, 0, 0.2)"
          >
            <img
              alt=""
              src="https://zos.alipayobjects.com/rmsportal/2.png"
              style="width:100%;vertical-align:top"
            />
          </a>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:20px;top:0;display:inline-block;list-style-type:none;vertical-align:top;width:0;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:5px;margin-right:5px;margin-top:auto;margin-bottom:auto"
        >
          <a
            href="http://www.alipay.com"
            style="display:block;position:relative;top:0;height:176px;box-shadow:2px 1px 1px rgba(0, 0, 0, 0.2)"
          >
            <img
              alt=""
              src="https://zos.alipayobjects.com/rmsportal/3.png"
              style="width:100%;vertical-align:top"
            />
          </a>
        </li>
      </ul>
    </div>
    <div
      class="slider-decorator-0"
      style="position:absolute;bottom:0;width:100%;text-align:center"
    >
      <div
        class="am-carousel-wrap"
      >
        <div
          class="am-carousel-wrap-dot am-carousel-wrap-dot-active"
        >
          <span />
        </div>
        <div
          class="am-carousel-wrap-dot"
        >
          <span />
        </div>
        <div
          class="am-carousel-wrap-dot"
        >
          <span />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/lottery.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="slider am-carousel my-carousel am-carousel-vertical"
    style="position:relative;display:block;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;visibility:hidden"
  >
    <div
      class="slider-frame"
      style="position:relative;display:block;overflow:hidden;height:initial;margin:0px;padding:0;transform:translate3d(0, 0, 0);-webkit-transform:translate3d(0, 0, 0);-ms-transform:translate(0, 0);box-sizing:border-box;-moz-box-sizing:border-box"
    >
      <ul
        class="slider-list"
        style="transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);-ms-transform:translate(0px, 0px);position:relative;display:block;margin:0px 0px;padding:0;height:0;width:auto;cursor:inherit;box-sizing:border-box;-moz-box-sizing:border-box"
      >
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            ring
          </div>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            ruby
          </div>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            iPhone
          </div>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            iPod
          </div>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            sorry
          </div>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            tourism
          </div>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            coke
          </div>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            ticket
          </div>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            note
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/carousel/demo/vertical.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="slider am-carousel my-carousel am-carousel-vertical"
    style="position:relative;display:block;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;visibility:hidden"
  >
    <div
      class="slider-frame"
      style="position:relative;display:block;overflow:hidden;height:initial;margin:0px;padding:0;transform:translate3d(0, 0, 0);-webkit-transform:translate3d(0, 0, 0);-ms-transform:translate(0, 0);box-sizing:border-box;-moz-box-sizing:border-box"
    >
      <ul
        class="slider-list"
        style="transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);-ms-transform:translate(0px, 0px);position:relative;display:block;margin:0px 0px;padding:0;height:0;width:auto;cursor:inherit;box-sizing:border-box;-moz-box-sizing:border-box"
      >
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            carousel 1
          </div>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            carousel 2
          </div>
        </li>
        <li
          class="slider-slide"
          style="position:absolute;left:0;top:0;display:block;list-style-type:none;vertical-align:top;width:100%;height:auto;box-sizing:border-box;-moz-box-sizing:border-box;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0"
        >
          <div
            class="v-item"
          >
            carousel 3
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
